--- a/index.html
+++ b/index.html
@@ -1,3 +1,20 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        body{
+            background-color: chocolate;
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <h1>اینجا هدر فایل من است</div></h1>
+    </header>
     
+</body>
 </html>
