--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>
         body{
-            background-color: chocolate;
+            background-color: brown;
         }
     </style>
 </head>
