--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>سایت شخصی من</title>
     <style>
         body{
             background-color: brown;
@@ -13,7 +13,7 @@
 <body>
 
     <header>
-        <h1>اینجا هدر فایل من است</div></h1>
+        <h2>اینجا هدر فایل من است</div></h2>
     </header>
     
 </body>
